=== Edge

<<<<<<< HEAD
* Enable code signature to capture trailing space when in square brackets. [Jason Garber]

* Allow emphasized phrases to include underscores. [Jason Garber]

* Include an ending question mark in a citation. [Jason Garber]

* Preserve leading whitespace in pre and bc blocks. [Jason Garber]

* Don't add hard break after preexisting <br />. [Jason Garber]

=======
>>>>>>> 1a45c0c... Change to list attributes so you can give style/class to list items (taken from PyTextile).  Breaks backwards compatibility.
* Change to list attributes so you can give style/class to list items (taken from PyTextile).  Breaks backwards compatibility.
  
  Before, the style applied to the first list item applied to the entire list.  Now, class/id/style placed
  before the list applies to the list element and after the hash or asterisk applies to the list item.  For
  example:
                                   <ul id="groceries">
    (#groceries)# Milk               <li>milk</li>
    # Eggs                           <li>eggs</li>
    #(optional) granola              <li class="optional">granola</li>
                                   </ul>

* Separated attributes out to have their own mark/store variable and regs.  This way, they won't conflict with captured text or backtracked text. [Jason Garber]

* Added a RedCloth::EXTENSION_LANGUAGE constant so you can tell what version of the parser you are using. [Jason Garber]

* Added a NotCompiledError to give a friendlier message when people just unpack RedCloth into their projects. [Jason Garber]

* Added a pure-ruby version of the parser for times when you can't compile the C or Java extensions.  You should avoid using it if at all possible because it is 32 times slower (and has some other problems, too)! [Jason Garber]

* Ignore spaces and tabs on blank lines between blocks. #120 [Jason Garber]
