@@ -1,6 +1,7 @@
 === Edge
 
 <<<<<<< HEAD
+<<<<<<< HEAD
 * Enable code signature to capture trailing space when in square brackets. [Jason Garber]
 
 * Allow emphasized phrases to include underscores. [Jason Garber]
@@ -37,6 +38,9 @@
 * Allow HTML tags with quoted attributes to be inside link text.  To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry. [Jason Garber]
 
 * Many improvements to the LaTeX formatter by Bil Kleb, a NASA scientist who's been working with LaTeX for 20 years.  Thanks, Bil!
+=======
+* Allow HTML tags with quoted attributes to be inside link text.  To do this, I had to remove the possibility that attributes in HTML tags could have spaces around the equals sign or unquoted attributes.  This change also greatly expands the complexity of the state machine, so compilation takes a long time. Sorry.
+>>>>>>> df84e47... Allow HTML tags with quoted attributes to be inside link text.
 
 === 4.1.9 / February 20, 2009
 
